docs(perf): lock 256 inflight owner optimization run